fix image resize issue on safari

--- a/css/scss/beta/_adaptive.scss
+++ b/css/scss/beta/_adaptive.scss
@@ -2,6 +2,7 @@
 
 .ibm-resize {
 	max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
